# KK2-SmoLLM-Deluxe

./: .env.example  .gitignore  README.md  pyproject.toml  reflektion.md  start_ui.py
KK2/: .gitignore  README.md  pyproject.toml  reflektion.md  start_server.py  start_ui.py
KK2/Assignment Information/: Based Chill To Do Lista.md
KK2/app/: config.py  data.py  main.py  schemas.py
KK2/app/chain/: direct_stats.py  steps.py
KK2/app/tests/: test_chain.py  test_endpoints.py
app/: __init__.py  config.py  main.py  schemas.py
app/chain/: __init__.py  direct_stats.py  pipeline.py  runnable.py  steps.py
app/tests/: __init__.py  test_chain.py  test_endpoints.py
