[project]
name = "cat-data-analyst-deluxe"
version = "0.1.0"
description = "FastAPI service for Cat Data Analyst Deluxe"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "transformers>=4.44.0",
    "torch>=2.4.0",
]

[project.scripts]
ui = "start_ui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["start_ui", "start_server"]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
